--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
         <a routerLink="customers" class="nav-link">Customers</a>
       </li>
       <li class="nav-item">
-        <a routerLink="add" class="nav-link">Add Customer</a>
+        <a routerLink="add-customer" class="nav-link">Add Customer</a>
       </li>
     </div>
   </nav>
