--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,40 @@
 <div>
   <nav class="navbar navbar-expand navbar-dark bg-dark">
+    <!-- logo redirects to 'home' (HomeComponent) -->
     <a href="#" class="navbar-brand">Premo Pizza</a>
     <div class="navbar-nav mr-auto">
+
+      <!-- TODO: make each main component (customer, employee, order) into
+                  a dropdown menu selection
+                  Can also add a  -->
+
+      <!-- menu navigation (NOT OPERATIONAL - does this need to route to products?) -->
+      <li class="nav-item">
+        <a routerLink="menu" class="nav-link">Menu</a>
+      </li>
+
+      <!-- customers navigation -->
       <li class="nav-item">
         <a routerLink="customers" class="nav-link">Customers</a>
       </li>
       <li class="nav-item">
         <a routerLink="add-customer" class="nav-link">Add Customer</a>
+      </li>
+
+      <!-- employees navigation (NOT OPERATIONAL) -->
+      <li class="nav-item">
+        <a routerLink="employees" class="nav-link">Employees</a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="add-employee" class="nav-link">Add Employee</a>
+      </li>
+
+      <!-- orders navigation (NOT OPERATIONAL) -->
+      <li class="nav-item">
+        <a routerLink="orders" class="nav-link">Orders</a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="add-order" class="nav-link">New Order</a>
       </li>
     </div>
   </nav>
