created product component added routing for product/menu added background image for home component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,4 @@
-<p>home works!</p>
+<div class="container home-screen">
+    <h1>Welcome to Premo Pizza!</h1>
+    <p>Check out our exclusive, artisan menu</p>
+</div>
