--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.css"; 
+
+body {
+    background-image: url('./assets/images/pizzalight.jpg');
+
+    background-color: lightgray;
+    background-size: cover;
+    /* background-position: center; */
+    background-repeat: no-repeat;
+
+}
