--- a/src/app/orders/components/add-order/add-order.component.html
+++ b/src/app/orders/components/add-order/add-order.component.html
@@ -1,1 +1,51 @@
-<p>add-order works!</p>
+<div style="width: 400px; margin: auto;">
+    <div class="submit-form">
+      <div *ngIf="!submitted">
+          <!-- form for creating a new order -->
+        <div class="form-group">
+          <label for="custid">Customer ID</label>
+          <input
+            type="text"
+            class="form-control"
+            id="custid"
+            required
+            [(ngModel)]="order.custid"
+            name="custid"
+          />
+        </div>
+  
+        <div class="form-group">
+          <label for="empid">Employee ID</label>
+          <!-- TODO: Can we make this a dropdown,
+                displaying only employees that are 'active'? -->
+          <input
+            class="form-control"
+            id="empid"
+            required
+            [(ngModel)]="order.empid"
+            name="empid"
+          />
+        </div>
+
+        <div class="form-group">
+            <label for="dateplaced">Date</label>
+            <input
+              type="date"
+              class="form-control"
+              id="dateplaced"
+              required
+              [(ngModel)]="order.dateplaced"
+              name="dateplaced"
+            />
+          </div>
+  
+        <button (click)="saveOrder()" class="btn btn-success">Submit</button>
+      </div>
+  
+      <div *ngIf="submitted">
+        <h4>Order sucessfully created!</h4>
+        <button class="btn btn-success" (click)="newOrder()">Add</button>
+      </div>
+    </div>
+  </div>
+  
