--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,8 @@ body {
 
     background-color: lightgray;
     background-size: cover;
-    /* background-position: center; */
+    background-attachment: fixed;
+    /* background-position: center; centering makes the scroll/resize jumpy*/
     background-repeat: no-repeat;
 
 }
