--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,18 +15,18 @@
 
       <!-- customers navigation -->
       <li class="nav-item">
-        <a routerLink="customers" class="nav-link">Customers</a>
+        <a routerLink="customerslist" class="nav-link">Customers</a>
       </li>
       <li class="nav-item">
-        <a routerLink="add-customer" class="nav-link">Add Customer</a>
+        <a routerLink="addcustomer" class="nav-link">Add Customer</a>
       </li>
 
       <!-- employees navigation (NOT OPERATIONAL) -->
       <li class="nav-item">
-        <a routerLink="employees" class="nav-link">Employees</a>
+        <a routerLink="employeelist" class="nav-link">Employees</a>
       </li>
       <li class="nav-item">
-        <a routerLink="add-employee" class="nav-link">Add Employee</a>
+        <a routerLink="addemployee" class="nav-link">Add Employee</a>
       </li>
 
       <!-- orders navigation (NOT OPERATIONAL) -->
