--- a/src/app/orders/components/order-list/order-list.component.html
+++ b/src/app/orders/components/order-list/order-list.component.html
@@ -56,7 +56,7 @@
         <!-- is there a way to add a function to add these
             details to the order-details page? An add button? -->
         <div>
-            <label><strong>Date:</strong></label>
+            <label><strong>Product:</strong></label>
             {{ currentOrder.product }}
         </div>
         <div>
@@ -68,7 +68,7 @@
             {{ currentOrder.discount }}
         </div>
   
-        <a class="badge badge-warning" routerLink="/orders/{{ currentorders.ordid }}">
+        <a class="badge badge-warning" routerLink="/orders/{{ currentOrder.id }}">
           Edit
         </a>
       </div>
