Working on orders page - passing objects Able to read object attributes in order main page, getting errors trying to update

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
 
       <!-- customers navigation -->
       <li class="nav-item">
-        <a routerLink="customerslist" class="nav-link">Customers</a>
+        <a routerLink="customers" class="nav-link">Customers</a>
       </li>
       <li class="nav-item">
         <a routerLink="addcustomer" class="nav-link">Add Customer</a>
@@ -23,7 +23,7 @@
 
       <!-- employees navigation (NOT OPERATIONAL) -->
       <li class="nav-item">
-        <a routerLink="employeelist" class="nav-link">Employees</a>
+        <a routerLink="employees" class="nav-link">Employees</a>
       </li>
       <li class="nav-item">
         <a routerLink="addemployee" class="nav-link">Add Employee</a>
