improved order and order detail page
order detail does not update, products do not show up in
dropdown menu

--- a/src/app/customer/components/customer-list/customer-list.component.html
+++ b/src/app/customer/components/customer-list/customer-list.component.html
@@ -50,8 +50,8 @@
           {{ currentCustomer.address }}
         </div>
         <div>
-          <label><strong>Phone:</strong></label>
-          {{ currentCustomer.phone }}
+          <label><strong>Zipcode:</strong></label>
+          {{ currentCustomer.zip }}
         </div>
 
       <a class="badge badge-warning" routerLink="/customers/{{ currentCustomer.customerId }}">
