working on order details

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
                   a dropdown menu selection
                   Can also add a  -->
 
-      <!-- menu navigation (NOT OPERATIONAL - does this need to route to products?) -->
+      <!-- menu navigation -->
       <li class="nav-item">
         <a routerLink="menu" class="nav-link">Menu</a>
       </li>
@@ -21,7 +21,7 @@
         <a routerLink="addcustomer" class="nav-link">Add Customer</a>
       </li>
 
-      <!-- employees navigation (NOT OPERATIONAL) -->
+      <!-- employees navigation -->
       <li class="nav-item">
         <a routerLink="employees" class="nav-link">Employees</a>
       </li>
@@ -29,12 +29,16 @@
         <a routerLink="addemployee" class="nav-link">Add Employee</a>
       </li>
 
-      <!-- orders navigation (NOT OPERATIONAL) -->
+      <!-- orders navigation -->
       <li class="nav-item">
         <a routerLink="orders" class="nav-link">Orders</a>
       </li>
       <li class="nav-item">
         <a routerLink="add-order" class="nav-link">New Order</a>
+      </li>
+
+      <li class="nav-item">
+        <a routerLink="reports" class="nav-link">Reports</a>
       </li>
     </div>
   </nav>
