temporary white bkgd for reports page adjusted routing on order details update

--- a/src/app/reports/reports.component.html
+++ b/src/app/reports/reports.component.html
@@ -1,3 +1,4 @@
+<div class="charts-page">
 <ngx-charts-bar-vertical
 [view]="[1000,400]"
 [results]="ordersByYear"
@@ -39,3 +40,5 @@
 [yAxis]="true"
 [gradient]="true">
 </ngx-charts-bar-vertical>
+
+</div>
