--- a/src/app/reports/reports.component.css
+++ b/src/app/reports/reports.component.css
@@ -1,1 +1,7 @@
-body {background-color: white;}
+.charts-page {
+
+    background-color: white;
+    padding: 50px;
+    margin: -50px;
+    margin-bottom: auto;
+}
